cmake_minimum_required(VERSION 3.17)
project(Algorithmic_Problem_Solving_Strategies)

set(CMAKE_CXX_STANDARD 14)

include_directories(Chapter1)

add_executable(Algorithmic_Problem_Solving_Strategies
        Chapter1/code3_1.cpp
        Chapter1/code3_1.h
        Chapter1/code3_2.cpp
        Chapter1/code3_2.h
        Chapter1/code4_1.cpp
        Chapter1/code4_1.h
        )
